app/assets/stylesheets/layouts/l-keep-updated.scss
.l-keep-updated {
  margin: 0 0 50px;

  @media #{mq-laptop} {
    margin: 0 0 95px;
  }

  .l-event-filters {
    display: flex;
    justify-content: flex-end;
    margin: 40px 0 28px;

    & + .l-card-grid {
      margin: 0;
    }

    .time-filter {
      padding: 0;

      color: rgba($color-5, .5);
      font-family: $font-family-1;
      font-size: $font-size-s;
      font-weight: $font-weight-bold;

      cursor: pointer;

      &.-applied {
        position: relative;
        color: $color-1;

        &::after {
          display: inline-block;
          position: absolute;
          bottom: -2px;
          left: 50%;
          width: 100%;
          height: 2px;
          transform: translate(-50%, 0);
          background: $color-1;
          content: '';
        }
      }
    }

    span {
      color: rgba($color-5, .5);
      font-family: $font-family-1;
      font-size: $font-size-s;
    }
  }

  .l-card-grid {
    margin: 40px 0 0;

    @media #{$mq-laptop} {
      margin: 85px 0 0;
    }

    .grid-footer {
      margin: 25px 0 0;

      @media #{$mq-laptop} {
        margin: 100px 0 0;
      }
    }

    .event {
      &[data-time='past'] {
        .date {
          color: rgba($color-5, .5);
        }
      }
    }

    &.-only-past {
      .event {
        &[data-time='present'],
        &[data-time='upcoming'] {
          display: none;
        }
      }
    }

    &.-only-upcoming {
      .event {
        &[data-time='present'],
        &[data-time='past'] {
          display: none;
        }
      }
    }
  }
}

